[gd_scene load_steps=26 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://assets/background/SkyTileSprite_1200_600.png" type="Texture" id=2]
[ext_resource path="res://assets/background/GrassSprite_256.png" type="Texture" id=3]
[ext_resource path="res://assets/player/Idle (1).png" type="Texture" id=4]
[ext_resource path="res://assets/player/Idle (2).png" type="Texture" id=5]
[ext_resource path="res://assets/player/Idle (3).png" type="Texture" id=6]
[ext_resource path="res://assets/player/Idle (4).png" type="Texture" id=7]
[ext_resource path="res://assets/player/Idle (5).png" type="Texture" id=8]
[ext_resource path="res://assets/player/Idle (6).png" type="Texture" id=9]
[ext_resource path="res://assets/player/Idle (7).png" type="Texture" id=10]
[ext_resource path="res://assets/player/Idle (8).png" type="Texture" id=11]
[ext_resource path="res://assets/player/Idle (9).png" type="Texture" id=12]
[ext_resource path="res://assets/player/Idle (10).png" type="Texture" id=13]
[ext_resource path="res://assets/player/Run (1).png" type="Texture" id=14]
[ext_resource path="res://assets/player/Run (2).png" type="Texture" id=15]
[ext_resource path="res://assets/player/Run (3).png" type="Texture" id=16]
[ext_resource path="res://assets/player/Run (4).png" type="Texture" id=17]
[ext_resource path="res://assets/player/Run (5).png" type="Texture" id=18]
[ext_resource path="res://assets/player/Run (6).png" type="Texture" id=19]
[ext_resource path="res://assets/player/Run (7).png" type="Texture" id=20]
[ext_resource path="res://assets/player/Run (8).png" type="Texture" id=21]
[ext_resource path="res://assets/player/Run (9).png" type="Texture" id=22]
[ext_resource path="res://assets/player/Run (10).png" type="Texture" id=23]
[ext_resource path="res://knight.gd" type="Script" id=24]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "run",
"speed": 17.0
} ]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="sky2" type="Sprite" parent="."]
position = Vector2( 900, 300 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 600, 50 )

[node name="sky1" type="Sprite" parent="."]
position = Vector2( 300, 300 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 600, 50 )

[node name="ground" type="Sprite" parent="."]
position = Vector2( 300, 500 )
scale = Vector2( 2.5, 1 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 600, 50 )
region_filter_clip = true

[node name="knight" type="AnimatedSprite" parent="."]
position = Vector2( 50, 500 )
frames = SubResource( 2 )
animation = "idle"
frame = 9
playing = true
script = ExtResource( 24 )
