[gd_scene load_steps=28 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://assets/background/SkyTileSprite_1200_600.png" type="Texture" id=2]
[ext_resource path="res://assets/spritesheet/SwanSheet_64.png" type="Texture" id=3]
[ext_resource path="res://Swan.gd" type="Script" id=4]
[ext_resource path="res://assets/background/GrassSprite_256.png" type="Texture" id=5]
[ext_resource path="res://assets/player/Idle (1).png" type="Texture" id=6]
[ext_resource path="res://assets/player/Idle (2).png" type="Texture" id=7]
[ext_resource path="res://assets/player/Idle (3).png" type="Texture" id=8]
[ext_resource path="res://assets/player/Idle (4).png" type="Texture" id=9]
[ext_resource path="res://assets/player/Idle (5).png" type="Texture" id=10]
[ext_resource path="res://assets/player/Idle (6).png" type="Texture" id=11]
[ext_resource path="res://assets/player/Idle (7).png" type="Texture" id=12]
[ext_resource path="res://assets/player/Idle (8).png" type="Texture" id=13]
[ext_resource path="res://assets/player/Idle (9).png" type="Texture" id=14]
[ext_resource path="res://assets/player/Idle (10).png" type="Texture" id=15]
[ext_resource path="res://assets/player/Run (1).png" type="Texture" id=16]
[ext_resource path="res://assets/player/Run (2).png" type="Texture" id=17]
[ext_resource path="res://assets/player/Run (3).png" type="Texture" id=18]
[ext_resource path="res://assets/player/Run (4).png" type="Texture" id=19]
[ext_resource path="res://assets/player/Run (5).png" type="Texture" id=20]
[ext_resource path="res://assets/player/Run (6).png" type="Texture" id=21]
[ext_resource path="res://assets/player/Run (7).png" type="Texture" id=22]
[ext_resource path="res://assets/player/Run (8).png" type="Texture" id=23]
[ext_resource path="res://assets/player/Run (9).png" type="Texture" id=24]
[ext_resource path="res://assets/player/Run (10).png" type="Texture" id=25]

[sub_resource type="Animation" id=1]
resource_name = "swan"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 7, 1 ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="Sky2" type="Sprite" parent="."]
position = Vector2( 1800, 300 )
texture = ExtResource( 2 )

[node name="Sky1" type="Sprite" parent="."]
position = Vector2( 600, 300 )
texture = ExtResource( 2 )

[node name="Swan" type="Sprite" parent="."]
position = Vector2( 50, 200 )
texture = ExtResource( 3 )
hframes = 8
frame = 2
script = ExtResource( 4 )

[node name="SwanAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Swan")
autoplay = "swan"
anims/swan = SubResource( 1 )

[node name="Ground" type="Sprite" parent="."]
position = Vector2( 300, 500 )
scale = Vector2( 2.5, 1 )
texture = ExtResource( 5 )

[node name="Knight" type="AnimatedSprite" parent="."]
position = Vector2( 50, 500 )
frames = SubResource( 2 )
animation = "idle"
frame = 4
playing = true
